+ lots of stuff
working bg, moon/main page. added spot for skills part. custom scroll bar. back to top button + nav bar scrolls smoothly

--- a/Website/home.html
+++ b/Website/home.html
@@ -7,14 +7,43 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./music.ico" type="image/x-icon">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Josefin+Sans">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=DM+Serif+Display">
+    <script src="index.js"></script>
+
   </head>
-  <body>
-    <main>
-        <header>
-            <p>menu</p>
+  <header>
+
+            <a href="#" class="logo">Logo</a>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
         </header>
-        <h1>welcome?!?!?!?!?!?</h1>  
-    </main>
-	<script src="index.js"></script>
+        <section class="home">
+            <section class="wrapper">
+            <div id="stars"></div>
+            <div id="stars2"></div>
+
+             </section>
+      <body>
+      
+      <div class="home" id="home">
+       <section class="home_top">
+       <button onclick="topFunction()" id="topbutton" title="Return to Top"> &#8593</button>
+        <h1> Hi! I'm Leah :)
+        <br>Welcome to my Portfolio</h1>
+        <img src="homeicon.gif" class="moongif">
+       </section>
+       </div>
+       </section>
+    <div class="skills" id="skills">
+    <p> "im so good at stuff" </p>
+    </div>
+    
   </body>
 </html>
