trying to make things responsive (and failing miserably)

--- a/index.html
+++ b/index.html
@@ -16,13 +16,20 @@
   </head>
   <body>
     <header>
-        <a href="#home" class="logo">Logo</a>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
+        <img src="logo.png" href="#home" class="logo">
+        <nav  class="menu" class="navbar" id="topmenu">
+            <ul class="nav-menu">
+                <li class="nav-item" ><a href="#home" class="nav-link">Home</a></li>
+                <li class="nav-item" ><a href="#skills" class="nav-link" >Skills</a></li>
+                <li class="nav-item" ><a href="#projects" class="nav-link" >Projects</a></li>
+                <li class="nav-item"><a href="#" class="nav-link" >Contact</a></li>
+            </ul>
+            <div class="hamburger">
+             <span class="bar"></span>
+             <span class="bar"></span>
+             <span class="bar"></span>
+            </div>
+        </nav>
     </header>
     <button onclick="topFunction()" id="topbutton" title="Return to Top"> &#8593</button>
     <section class="starwrapper">
