added gallery, contact links and other cool stuff probably

--- a/index.html
+++ b/index.html
@@ -157,10 +157,33 @@
         <div id="project1" class="modalDialog">
           <!-- Modal content -->
           <div>
-            <a href="#close" title="Close" class="close">X</a>
+            <a href="#close" title="Close" class="close">x</a>
             <!-- <img class="modal-content"> -->
             <h2>hi</h2>
-            <p>Some text in the Modal..</p>
+            <!-- Slideshow container -->
+            <div class="slideshow-container">
+
+              <!-- Full-width images with number and caption text -->
+              <div class="mySlides fade">
+                <img src="https://cdn.discordapp.com/attachments/749050216187166923/1090191643996598352/IMG_7728.jpg" style="width:auto; max-height:50vh">
+              </div>
+
+              <div class="mySlides fade">
+                <img src="https://cdn.discordapp.com/attachments/749050216187166923/1089577716195540992/IMG_2448.jpg" style="width:auto; max-height:50vh">
+              </div>
+
+              <div class="mySlides fade">
+                <img src="https://cdn.discordapp.com/attachments/749050216187166923/993509777902686368/DC11C479-92F9-437A-9648-9068693C1C5E.jpg" style="width:auto; max-height:50vh">
+              </div>
+
+              <!-- Next and previous buttons -->
+              <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+              <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            </div>
+            <br>
+
+            <!-- The dots/circles -->
+            <p>aaaaa</p>
           </div>
         </div>
 
@@ -170,7 +193,26 @@
     </section>
 
     <section id="contact">
+      <div class="container">
+        <div class="contact">
+          <p>my email is aaaaaaa@gmail.com</p>
+          <br>
+          <p>pls dont message me im bad with ppl</p>
+        </div>
 
+      </div>
+      <div class="container">
+        <div class="linkscontainer">
+          <a href="https://www.linkedin.com/in/leah-crozier-047093270/"><img src="https://img.icons8.com/ios-glyphs/30/FFFFFF/linkedin-2--v1.png" class="socialicon" style="
+            scale: 80%;"></a>
+          <a href="https://pin.it/3HbbKS3"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/pinterest--v1.png" class="socialicon" style="
+            scale: 70%;"></a>
+          <a href="https://twitter.com/aurralix"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/twitter.png" class="socialicon" style="
+            scale: 70%;"></a>
+          <a href="https://instagram.com/leahrvse?igshid=YmMyMTA2M2Y="><img src="https://img.icons8.com/ios/50/FFFFFF/instagram-new--v1.png" class="socialicon" style="
+            scale: 70%;"></a>
+        </div>
+      </div>
       
     </section>
     
