--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
 <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="icon" href="./music.ico" type="image/x-icon">
+    <link rel="icon" href="./images/socialicons/moonfavicon.png" type="image/x-icon">
 
 <!-- JS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="./js/index.js"></script>
 
 
@@ -130,30 +130,30 @@
         <div class="projectgallery_column">
           <!-- img 1 - 3 -->
           
-          <a href="#project1" alt="Project 1" class="projectgallery_modal project1"><img src="https://preview.redd.it/fikutfdyqb1a1.jpg?width=640&crop=smart&auto=webp&s=0e4f3484530d510ee6c284967d2030770d9e0a84" class="projectgallery_image"></a>
-          <a href="#project" alt="Project 1" class="projectgallery_modal project1" id="modal-closed"><img src="https://preview.redd.it/fikutfdyqb1a1.jpg?width=640&crop=smart&auto=webp&s=0e4f3484530d510ee6c284967d2030770d9e0a84" class="projectgallery_image"></a>
-          <a href="#project" alt="Project 1" class="projectgallery_modal project1" id="modal-closed"><img src="https://preview.redd.it/fikutfdyqb1a1.jpg?width=640&crop=smart&auto=webp&s=0e4f3484530d510ee6c284967d2030770d9e0a84" class="projectgallery_image"></a>
+          <a href="#project1" alt="3D Living Room" class="projectgallery_modal project1"><img src="./images/projects/livingroom/Living Room 1.png" class="projectgallery_image"></a>
+          <a href="#project4" alt="" class="projectgallery_modal project4"><img src="https://preview.redd.it/fikutfdyqb1a1.jpg?width=640&crop=smart&auto=webp&s=0e4f3484530d510ee6c284967d2030770d9e0a84" class="projectgallery_image"></a>
+          <a href="#project7" alt="" class="projectgallery_modal project7"><img src="https://preview.redd.it/fikutfdyqb1a1.jpg?width=640&crop=smart&auto=webp&s=0e4f3484530d510ee6c284967d2030770d9e0a84" class="projectgallery_image"></a>
         </div>
 
         <!-- column 2 -->
 
         <div class="projectgallery_column">
           <!-- img 1 - 3 -->
-          <a href="#project" alt="Project 1" class="projectgallery_modal project1" id="modal-closed"><img src="https://preview.redd.it/fikutfdyqb1a1.jpg?width=640&crop=smart&auto=webp&s=0e4f3484530d510ee6c284967d2030770d9e0a84" class="projectgallery_image"></a>
-          <a href="#project" alt="Project 1" class="projectgallery_modal project1" id="modal-closed"><img src="https://preview.redd.it/fikutfdyqb1a1.jpg?width=640&crop=smart&auto=webp&s=0e4f3484530d510ee6c284967d2030770d9e0a84" class="projectgallery_image"></a>
-          <a href="#project" alt="Project 1" class="projectgallery_modal project1" id="modal-closed"><img src="https://preview.redd.it/fikutfdyqb1a1.jpg?width=640&crop=smart&auto=webp&s=0e4f3484530d510ee6c284967d2030770d9e0a84" class="projectgallery_image"></a>
+          <a href="#project2" alt="Jellyfish" class="projectgallery_modal project2"><img src="./images/projects/jellyfish/jellyfish1.png" class="projectgallery_image"></a>
+          <a href="#project5" alt="Project 1" class="projectgallery_modal project5"><img src="https://preview.redd.it/fikutfdyqb1a1.jpg?width=640&crop=smart&auto=webp&s=0e4f3484530d510ee6c284967d2030770d9e0a84" class="projectgallery_image"></a>
+          <a href="#project8" alt="Project 1" class="projectgallery_modal project8"><img src="https://preview.redd.it/fikutfdyqb1a1.jpg?width=640&crop=smart&auto=webp&s=0e4f3484530d510ee6c284967d2030770d9e0a84" class="projectgallery_image"></a>
         </div>
 
         <!-- column 3 -->
 
         <div class="projectgallery_column">
           <!-- img 1 - 3 -->
-          <a href="#project" alt="Project 1" class="projectgallery_modal project1" id="modal-closed"><img src="https://preview.redd.it/fikutfdyqb1a1.jpg?width=640&crop=smart&auto=webp&s=0e4f3484530d510ee6c284967d2030770d9e0a84" class="projectgallery_image"></a>
-          <a href="#project" alt="Project 1" class="projectgallery_modal project1" id="modal-closed"><img src="https://preview.redd.it/fikutfdyqb1a1.jpg?width=640&crop=smart&auto=webp&s=0e4f3484530d510ee6c284967d2030770d9e0a84" class="projectgallery_image"></a>
-          <a href="#project" alt="Project 1" class="projectgallery_modal project1" id="modal-closed"><img src="https://preview.redd.it/fikutfdyqb1a1.jpg?width=640&crop=smart&auto=webp&s=0e4f3484530d510ee6c284967d2030770d9e0a84" class="projectgallery_image"></a>
+          <a href="#project3" alt="Yearbook Design" class="projectgallery_modal project3"><img src="./images/projects/jaarboek/jaarboek ontwerp voorkant.png" class="projectgallery_image"></a>
+          <a href="#project6" alt="Project 1" class="projectgallery_modal project6"><img src="https://preview.redd.it/fikutfdyqb1a1.jpg?width=640&crop=smart&auto=webp&s=0e4f3484530d510ee6c284967d2030770d9e0a84" class="projectgallery_image"></a>
+          <a href="#project9" alt="Project 1" class="projectgallery_modal project9"><img src="https://preview.redd.it/fikutfdyqb1a1.jpg?width=640&crop=smart&auto=webp&s=0e4f3484530d510ee6c284967d2030770d9e0a84" class="projectgallery_image"></a>
         </div>
       
-        <!-- descriptions/modals -->
+        <!-- project 1 - Living Room -->
         <div id="project1" class="modalDialog">
           <!-- Modal content -->
           <div>
@@ -161,7 +161,73 @@
             <!-- <img class="modal-content"> -->
             <h2>hi</h2>
             <!-- Slideshow container -->
-            <div class="slideshow-container">
+            <div class="slideshow-container slider" id="div1">
+              <div class="mySlides fade">
+                <img src="./images/projects/livingroom/Living Room 1.png" style="width:auto; max-height:50vh">
+              </div>
+
+              <div class="mySlides fade">
+                <img src="./images/projects/livingroom/Living Room 2.png" style="width:auto; max-height:50vh">
+              </div>
+
+              <div class="mySlides fade">
+                <img src="./images/projects/livingroom/Living Room 3.png" style="width:auto; max-height:50vh">
+              </div>
+
+              <div class="mySlides fade">
+                <img src="./images/projects/livingroom/Living Room 4.png" style="width:auto; max-height:50vh">
+              </div>
+
+              <!-- Next and previous buttons -->
+              <a class="prev" onclick="plusDivs(this,-1)">&#10094;</a>
+              <a class="next" onclick="plusDivs(this,1)">&#10095;</a>
+            </div>
+            <br>
+            <p>aaaaa</p>
+          </div>
+        </div>
+
+        <!-- Project 2 - Jellyfish  -->
+        <div id="project2" class="modalDialog">
+          <!-- Modal content -->
+          <div>
+            <a href="#close" title="Close" class="close">x</a>
+            <!-- <img class="modal-content"> -->
+            <h2>hi</h2>
+            <!-- Slideshow container -->
+            <div class="slideshow-container slider">
+
+              <!-- Full-width images with number and caption text -->
+              <div class="mySlides fade">
+                <img src="https://cdn.discordapp.com/attachments/749050216187166923/1090191643996598352/IMG_7728.jpg" style="width:auto; max-height:50vh">
+              </div>
+
+              <div class="mySlides fade">
+                <img src="https://cdn.discordapp.com/attachments/749050216187166923/1090191643996598352/IMG_7728.jpg" style="width:auto; max-height:50vh">
+              </div>
+
+              <div class="mySlides fade">
+                <img src="https://cdn.discordapp.com/attachments/749050216187166923/1090191643996598352/IMG_7728.jpg" style="width:auto; max-height:50vh">
+              </div>
+
+              <!-- Next and previous buttons -->
+              <a class="prev" onclick="plusDivs(this,1)">&#10094;</a>
+              <a class="next" onclick="plusDivs(this,1)">&#10095;</a>
+            </div>
+            <br>
+            <p>aaaaa</p>
+          </div>
+        </div>
+
+        <!-- Project 3 - Jaarboek Kaft  -->
+        <div id="project3" class="modalDialog">
+          <!-- Modal content -->
+          <div>
+            <a href="#close" title="Close" class="close">x</a>
+            <!-- <img class="modal-content"> -->
+            <h2>hi</h2>
+            <!-- Slideshow container -->
+            <div class="slideshow-container slider">
 
               <!-- Full-width images with number and caption text -->
               <div class="mySlides fade">
@@ -177,17 +243,13 @@
               </div>
 
               <!-- Next and previous buttons -->
-              <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-              <a class="next" onclick="plusSlides(1)">&#10095;</a>
+              <a class="prev" onclick="plusDivs(this,1)">&#10094;</a>
+              <a class="next" onclick="plusDivs(this,1)">&#10095;</a>
             </div>
             <br>
-
-            <!-- The dots/circles -->
             <p>aaaaa</p>
           </div>
         </div>
-
-
 
       </div>
     </section>
@@ -195,14 +257,16 @@
     <section id="contact">
       <div class="container">
         <div class="contact">
-          <p>my email is aaaaaaa@gmail.com</p>
+          <p>Made by Leah Crozier // 2023</p>
           <br>
-          <p>pls dont message me im bad with ppl</p>
+          <p style="font-size: 8px;">Icons by Icons8</p>
         </div>
 
       </div>
       <div class="container">
         <div class="linkscontainer">
+          <a href="https://github.com/leahcrozier"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/github.png" class="socialicon" style="
+            scale: 80%;"></a>
           <a href="https://www.linkedin.com/in/leah-crozier-047093270/"><img src="https://img.icons8.com/ios-glyphs/30/FFFFFF/linkedin-2--v1.png" class="socialicon" style="
             scale: 80%;"></a>
           <a href="https://pin.it/3HbbKS3"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/pinterest--v1.png" class="socialicon" style="
